--- a/.github/workflows/fng-notifier.yml
+++ b/.github/workflows/fng-notifier.yml
@@ -14,6 +14,14 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
